src/objects/Quotation__c.object
<CustomObject>
    <description>Storing the cost sheets generated against opportunities. one of this will be used as the final cost sheet for booking as well.</description>
    <fields>
        <fullName>Agreement_Value_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Agreement Value post discount</description>
        <label>Consideration Amount (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Value_ST_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Service Tax on on AV post discount</description>
        <label>Consideration Amount ST (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Value_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <description>service tax on agreement value</description>
        <label>Consideration Amount ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Agreement value [Basic + PLC + floor rise+ development charges]</description>
        <label>Consideration Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allotment_Premium_Agreement_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consideration Amount (Agreement Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_booking_without_full_token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow booking without full token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amenity_Charge_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amenity Charge ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amenity_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amenity Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appartment_Configuration__c</fullName>
        <label>Appartment Configuration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Required_on_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required on Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Standard_Discount_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Standard Discount (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Standard_Discount_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Level Max Approved Discount</description>
        <label>Approved Standard Discount (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Rate_L_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Base client post discount (Lumpsum)</description>
        <label>Base Rate (L D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Rate_L__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lumpsum Base Rate</description>
        <label>Base Rate (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Rate_PSF_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Client Rate  PSF post discount</description>
        <label>Base Rate (PSF D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Rate_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Rate (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_Sq_Ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Carpet Area (Sq. Ft.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Carpet Area(Sq.Mt)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Club_Membership_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Club Membership Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Club_Membership_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Club Membership Service Tax</description>
        <label>Club Membership ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Common_Area_Maintenance_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Common Area Maintenance  Service Tax</description>
        <label>Common Area Maintenance  ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Common_Area_Maintenance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Common Area Maintenance	Charges</description>
        <label>Common Area Maintenance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Sheet_Page__c</fullName>
        <formula>Project__r.View_Cost_Sheet_Page__c</formula>
        <label>Cost Sheet Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approval_Status__c</fullName>
        <label>Current Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Total_Discount_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Total Discount (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Total_Discount_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Total Discount (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependable__c</fullName>
        <label>Dependable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Charges_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Development Charges (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Charges_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Development Charges (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_1_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount 1 (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_1_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PSF value of the discount one</description>
        <label>Discount 1 (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_1_Type__c</fullName>
        <label>Discount 1 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_2_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount 2 (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_2_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PSF value of the discount two</description>
        <label>Discount 2 (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_2_Type__c</fullName>
        <label>Discount 2 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_3_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount 3 (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_3_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PSF value of the discount three</description>
        <label>Discount 3 (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_3_Type__c</fullName>
        <label>Discount 3 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusive_Area__c</fullName>
        <formula>Project_Unit__r.Exclusive_Area__c</formula>
        <label>Exclusive Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finished_Unfinished__c</fullName>
        <label>Finished/Unfinished</label>
        <picklist>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfinished</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FlatNo__c</fullName>
        <label>UnitNo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Typology__c</fullName>
        <label>Unit Typology</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloorNo1__c</fullName>
        <label>FloorNo1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloorNo__c</fullName>
        <label>FloorNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Rise_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Floor Rise (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Rise_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Floor Rise (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <defaultValue>true</defaultValue>
        <label>GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grand_Total_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Grand Total post discount</description>
        <label>Grand Total (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increment_Discount_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Increment Discount (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increment_Discount_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Increment Discount (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Charges_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Infrastructure Charges Service Tax</description>
        <label>Infrastructure Charges ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Infrastructure charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsModified_Base_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsModified Base Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Charges_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Legal Charges Service Tax</description>
        <label>Legal Charges ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Legal Charges</description>
        <label>Legal Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_In_AV__c</fullName>
        <formula>Project__r.Legal_In_AV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal In AV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_One_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level One Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_Three_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level Three Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_Two_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level Two Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSEB_Infrastructure_Development_cha__c</fullName>
        <label>MSEB,Infrastructure&amp;DevelopmentCharge ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSEB_Infrastructure_Development_charge__c</fullName>
        <label>MSEB,Infrastructure &amp; Development charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MVAT_D__c</fullName>
        <defaultValue>0</defaultValue>
        <description>MVAT on discounted agreement value</description>
        <label>MVAT (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MVAT_ST_D__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MVAT ST (D)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MVAT_ST__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MVAT ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MVAT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MVAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modified_Base_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Modified Base Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyID__c</fullName>
        <externalId>true</externalId>
        <label>MyID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPV_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPV Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPV_L__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NPV (L)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPV_PSF__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PSF value of the NPV</description>
        <label>NPV (PSF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPV_Type__c</fullName>
        <description>Actual Text for the NPV discount type</description>
        <label>NPV Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Stack_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Stack (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_parking__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of parking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>notEqual</operation>
                <value>Token Amount Received - BIP, Booking confirmed, Closed Lost</value>
            </filterItems>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Project__c</valueField>
            </filterItems>
            <infoMessage>Quotations can be created only on opportunities which belong to the same project as selected unit</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Base_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Original Base Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Amount_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges Amount 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Amount_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges Amount 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Amount_12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges Amount 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Category_10__c</fullName>
        <label>Other Charges Category 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Category_11__c</fullName>
        <label>Other Charges Category 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Category_12__c</fullName>
        <label>Other Charges Category 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Desc_10__c</fullName>
        <label>Other Charges Desc 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Desc_11__c</fullName>
        <label>Other Charges Desc 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Desc_12__c</fullName>
        <label>Other Charges Desc 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Charges_ST_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges ST 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges_ST_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges ST 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges_ST_12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Charges ST 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum total of all charges categorized as other charges [sinking charges]</description>
        <label>Other Charges Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Infra_Charges_ST__c</fullName>
        <label>Parking Infra Charges (ST)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Infra_Charges__c</fullName>
        <label>Parking Infra Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Type__c</fullName>
        <label>Parking Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Plan Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_plan_page__c</fullName>
        <formula>IF((Legal_In_AV__c), &quot;View_Payment_PlanL&quot;, &quot;View_Payment_Plan&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment plan page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subvention Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Subvention Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Charges Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Charges Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Amount_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Charges Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Category_1__c</fullName>
        <label>Premium Charges Category 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Category_2__c</fullName>
        <label>Premium Charges Category 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Category_3__c</fullName>
        <label>Premium Charges Category 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Description_1__c</fullName>
        <label>Premium Charges Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Description_2__c</fullName>
        <label>Premium Charges Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_Description_3__c</fullName>
        <label>Premium Charges Description 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_ST_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Charges ST 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_ST_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Charges ST 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Charges_ST_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Charges ST 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepared_Date__c</fullName>
        <description>Date when the quote was created</description>
        <label>Prepared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Print_Customer_Pay_Plan__c</fullName>
        <formula>HYPERLINK(&quot;/apex/View_Payment_Plan?qId=&quot;+Id,&quot;Print Customer Pay Plan&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Customer Pay Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Deal_Description_Internal__c</fullName>
        <formula>HYPERLINK(&quot;/apex/DealDescription?qId=&quot; +Id+&quot;&amp;view=&quot;+&apos;Customer&apos;+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Print Deal Description (Without Letterhead)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrintDealDescription(Without Letterhead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Deal_Discription__c</fullName>
        <formula>HYPERLINK(&quot;/apex/DealDescription?qId=&quot; +Id+&quot;&amp;view=&quot;+&apos;Customer&apos;+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Print Deal Description&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Deal Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Discount_Snapshot__c</fullName>
        <formula>HYPERLINK(&quot;/apex/QuotationDiscountView?qId=&quot;+Id,&quot;Print Discount Snapshot&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Discount Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Quotation_Internal_On_Letter_Head__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot;+Id+&quot;&amp;view=&quot;+&apos;Internal&apos;+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Print Quotation Internal On Letter Head&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Quotation Internal On Letter Head</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Quotation_Internal__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot;+Id+&quot;&amp;view=&quot;+&apos;Internal&apos;+&quot;&amp;letterhead=&quot;+&apos;1&apos;,&quot;Print Quotation Internal&quot;)</formula>
        <label>Print Quotation Internal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Quotation__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot; +Id+&quot;&amp;view=&quot;+&apos;Customer&apos;+&quot;&amp;letterhead=&quot;+&apos;1&apos;,&quot;Print Quotation (Online Version)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Quotation (Online Version)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Quotation_on_Letter_head__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot;+Id+&quot;&amp;view=&quot;+&apos;Customer&apos;+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Print Quotation (Without Letterhead)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Quotation (Without Letterhead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_Maint_Charges_Desc_1__c</fullName>
        <label>Proj Maint Charges Desc 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_Maint_Charges_Desc_2__c</fullName>
        <label>Proj Maint Charges Desc 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_Maint_Charges_Desc_3__c</fullName>
        <label>Proj Maint Charges Desc 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_Amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Maintenance Charges Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_Amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Maintenance Charges Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_Amount_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Maintenance Charges Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_Category_1__c</fullName>
        <label>Project Maintenance Charges Category 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_Category_2__c</fullName>
        <label>Project Maintenance Charges Category 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_Category_3__c</fullName>
        <label>Project Maintenance Charges Category 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_ST_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Maintenance Charges ST 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_ST_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Maintenance Charges ST 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Maintenance_Charges_ST_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Maintenance Charges ST 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Specific Charges Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Specific Charges Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Charges_Amount_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Project Specific Charges Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>